gobmkida/c1/do_play_move
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_play_move/src/engine/board.c:3900:30: error: use of undeclared identifier 'byte_9AA89F'
if ( v4 == ( unsigned __int8)byte_9AA89F[v5] ) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_play_move/src/engine/board.c:3906:30: error: use of undeclared identifier 'byte_9AA88C'
if ( v4 == ( unsigned __int8)byte_9AA88C[v5] ) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_play_move/src/engine/board.c:3921:5: error: use of undeclared identifier 'byte_9AA89F'
|| !byte_9AA89F[v5] 
    ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_play_move/src/engine/board.c:3922:22: error: use of undeclared identifier 'byte_9AA89F'
|| ( unsigned __int8)byte_9AA89F[v5] == color && string[string[239].neighborlist[v5 + 160]].liberties > 1 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_play_move/src/engine/board.c:3923:5: error: use of undeclared identifier 'byte_9AA88C'
|| !byte_9AA88C[v5] 
    ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_play_move/src/engine/board.c:3924:22: error: use of undeclared identifier 'byte_9AA88C'
|| ( unsigned __int8)byte_9AA88C[v5] == color && string[string[239].neighborlist[v5 + 141]].liberties > 1 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_play_move/src/engine/board.c:3965:25: error: use of undeclared identifier 'byte_9AA89F'
v19 = ( unsigned __int8)byte_9AA89F[v5]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_play_move/src/engine/board.c:3981:25: error: use of undeclared identifier 'byte_9AA88C'
v22 = ( unsigned __int8)byte_9AA88C[v5]; 
                        ^
8 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_play_move/src/obj/1/board.o] Error 1
